# PerfGuardian

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
cli/: CMakeLists.txt  main.cpp
cmake/: deps.cmake  libclang.def
core/: CMakeLists.txt
core/include/perfguardian/: baseline.hpp  clang_parser.hpp  confidence.hpp  config.hpp  diagnostic.hpp  hotspot.hpp  html_report.hpp  json_report.hpp  parse_result.hpp  pg001.hpp  pg002.hpp  pg003.hpp  pg004.hpp  pg005.hpp  pg006.hpp  project_loader.hpp  rules.hpp  sarif_report.hpp  severity.hpp  symbol_db.hpp  version.hpp
core/src/analysis/: baseline.cpp  hotspot.cpp  html_report.cpp  json_report.cpp  sarif_report.cpp
core/src/config/: config.cpp
core/src/parser/: clang_parser.cpp
core/src/project_loader/: project_loader.cpp
core/src/rules/: pg001.cpp  pg002.cpp  pg003.cpp  pg004.cpp  pg005.cpp  pg006.cpp  rules.cpp
core/src/symbol_db/: symbol_db.cpp
docs/: architecture.md
samples/clean-demo/: main.cpp
samples/find-in-loop-demo/: main.cpp
samples/large-copy-demo/: game.cpp  player.h
samples/reserve-demo/: main.cpp
scripts/: install.sh
tests/: CMakeLists.txt  smoke_test.cpp
